--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=HomeKit-ESP8266
-version=1.2.0
-author=Mixiaoxiao
-maintainer=Mixiaoxiao
+name=Apple-HomeKit-ESP8266
+version=1.0.0
+author=Shibin AK
+maintainer=Shibin AK
 sentence=Native Apple HomeKit accessory implementation for the ESP8266 Arduino core.
 paragraph=Native Apple HomeKit Accessory Implementation for the ESP8266 Arduino core.
 category=Communication
-url=https://github.com/Mixiaoxiao/Arduino-HomeKit-ESP8266.git
+url=https://github.com/Hexacon-labs/Apple-HomeKit-ESP8266.git
 architectures=esp8266
